Fix comments + fix demo

--- a/src/demo.html
+++ b/src/demo.html
@@ -16,7 +16,9 @@
                     document.body.appendChild(this);
                 },
                 width: 900,
-                height: 500
+                height: 500,
+                minImgWidth: 2,
+                minImgHeight: 2
             });
         </script>
         
